syntax = "proto3";
package mail.v1;

option go_package = "github.com/lafetz/quest-demo/proto/mail";
message SendEmailRequest {
  string from = 1;
  string to = 2;
  string subject = 3;
  string body = 4;
}

message SendEmailResponse {}

service EmailService {
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
}